# markdown-service-backup

./: .gitignore  API_INTERFACE_SPECIFICATION.md  DEV_MODE_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  INTERFACE_CONTRACTS.md  ORCHESTRATOR_INTEGRATION.md  README.md  dev_start.py  env.example  pyproject.toml  requirements.txt  start_production.py
src/: __init__.py
src/markdown_service/: __init__.py  main.py
src/markdown_service/api/: __init__.py
src/markdown_service/core/: __init__.py  config.py  security.py
src/markdown_service/models/: __init__.py  api.py
src/markdown_service/services/: __init__.py  file_manager.py  marker_client.py
src/markdown_service/utils/: __init__.py  mime_detection.py  validators.py
tests/unit/: test_env.py
